## 2017-3-7
• Updated branch map to reflect latest changes
• Bar chart has been removed and replaced with number of visits

## 2017-2-13
• Added filters for date search
• Added new navigation menus on submissions.html
• Updated dashboard