@@ -117,7 +117,7 @@
                                 Carrier Visits
                             </div>
 
-                            <form class="form-inline">
+                            <form class="form-inline carrierts-form-inline">
                                 <div class="form-group multi-select">
                                     <label class="control-label sr-only" for="start-date">Select State:</label>
                                     <select data-placeholder="Select Location(s)" multiple class="chosen-select-width" tabindex="16">
@@ -160,19 +160,19 @@
                                     </select>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group date-form">
                                     <label class="control-label sr-only" for="start-date">Start Date:</label>
                                     <input type="search" class="form-control input-sm" name="date" id="date" placeholder="Filter Start Date">
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group date-form date-form-mb">
                                     <label class="control-label sr-only" for="start-date">End Date:</label>
                                     <input type="search" class="form-control input-sm" name="date" id="date" placeholder="Filter End Date">
                                 </div>
 
-                                <div class="form-group pull-right">
-                                    <button type="clear" class="btn btn-default btn-sm clear">Clear</button>
-                                    <button type="submit" class="btn btn-default btn-sm">Submit</button>
+                                <div class="form-group pull-right form-button">
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-arrow-circle-right"></i> Submit</button>
+                                    <button type="clear" class="btn btn-default"><i class="fa fa-trash"></i> Clear</button>
                                 </div>
                             </form>
                         </div>
