@@ -147,7 +147,7 @@ $(document)
                                             <button type="submit" class="btn btn-default btn-sm">Search</button>
                                         </div>
                                     </div>
-                                    <a href="#" class="btn visit-btn pull-right">Add Visit</a>
+                                    <a href="#" class="btn visit-btn pull-right"><i class="fa fa-plus"></i> Add Visit</a>
                                 </fieldset>
                             </form>
                         </div>
